--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: rgba(0, 0, 0, 0); /* Transparent background */
-            color: Black; /* White text color */
+            color: white; /* White text color */
             font-size: 32px; /* Adjust the text size as needed */
             font-family: Arial, sans-serif; /* Choose a suitable font */
             margin: 0;
